--- a/ViewerPlug/index.html
+++ b/ViewerPlug/index.html
@@ -44,7 +44,7 @@
 	<!--game_files_end-->
 	<!--script_end-->
 	<!--ta-->
-	<script type="text/javascript" src="https://tajs.qq.com/stats?sId=62452554" charset="UTF-8"></script>
+	<!-- <script type="text/javascript" src="https://tajs.qq.com/stats?sId=62452554" charset="UTF-8"></script> -->
 </head>
 
 <body>
@@ -61,7 +61,7 @@
 	<div id="dragonBonesPlayer" class="dragonbones_player">
 		<div style="margin: auto;width: 100%;height: 100%;" class="egret-player" data-entry-class="Main"
 			data-orientation="auto" data-scale-mode="noScale" data-frame-rate="60" data-content-width="1136"
-			data-content-height="640" data-show-paint-rect="false" data-multi-fingered="2" data-show-fps="false"
+			data-content-height="640" data-show-paint-rect="false" data-multi-fingered="2" data-show-fps="true"
 			data-show-log="false" data-show-fps-style="x:0,y:0,size:10,textColor:0xffffff,bgAlpha:0.9">
 		</div>
 	</div>
